# SystemF-Interpreter

./: .gitignore  README.md  SystemF-Intepreter.cabal
src/: Main.hs
